# pex

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  imgui.ini  pex.desktop
cmake/: EmbedResource.cmake
src/: app.cpp  app.hpp  app_details.cpp  app_input.cpp  app_kill.cpp  app_popup.cpp  app_process.cpp  app_utils.cpp  app_views.cpp  data_store.cpp  data_store.hpp  errors.hpp  main.cpp  main_tui.cpp  name_resolver.cpp  name_resolver.hpp  platform_factory.hpp  process_info.hpp  procfs_reader.cpp  procfs_reader.hpp  single_instance.cpp  single_instance.hpp  system_info.cpp  system_info.hpp
src/freebsd/: freebsd_process_data_provider.cpp  freebsd_process_data_provider.hpp  freebsd_process_killer.cpp  freebsd_process_killer.hpp  freebsd_system_data_provider.cpp  freebsd_system_data_provider.hpp  platform_factory_freebsd.cpp
src/imgui/: imgui_app.cpp  imgui_app.hpp  imgui_details_panel_view.cpp  imgui_input.cpp  imgui_kill_dialog_view.cpp  imgui_process_list_view.cpp  imgui_process_popup_view.cpp  imgui_system_panel_view.cpp
src/interfaces/: i_process_data_provider.hpp  i_process_killer.hpp  i_system_data_provider.hpp  i_view.hpp
src/interfaces/views/: i_details_panel_view.hpp  i_kill_dialog_view.hpp  i_process_list_view.hpp  i_process_popup_view.hpp  i_system_panel_view.hpp
src/linux/: linux_process_data_provider.cpp  linux_process_data_provider.hpp  linux_process_killer.cpp  linux_process_killer.hpp  linux_system_data_provider.cpp  linux_system_data_provider.hpp  platform_factory_linux.cpp
src/solaris/: platform_factory_solaris.cpp  solaris_process_data_provider.cpp  solaris_process_data_provider.hpp  solaris_process_killer.cpp  solaris_process_killer.hpp  solaris_system_data_provider.cpp  solaris_system_data_provider.hpp
src/stub/: platform_factory_stub.cpp  stub_providers.cpp  stub_providers.hpp
src/tui/: tui_app.cpp  tui_app.hpp  tui_colors.cpp  tui_colors.hpp  tui_details_panel.cpp  tui_input.cpp  tui_kill_dialog.cpp  tui_process_list.cpp  tui_system_panel.cpp
src/viewmodels/: app_view_model.hpp  details_panel_view_model.hpp  kill_dialog_view_model.hpp  process_list_view_model.hpp  process_popup_view_model.hpp  system_panel_view_model.hpp
